agrego aos, tips y contacto

--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "suelto-confio",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/frankYanez/Suelto-y-Confio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/frankYanez/Suelto-y-Confio/issues"
+  },
+  "homepage": "https://github.com/frankYanez/Suelto-y-Confio#readme",
+  "description": ""
 }
