--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "url": "https://github.com/frankYanez/Suelto-y-Confio/issues"
   },
   "homepage": "https://github.com/frankYanez/Suelto-y-Confio#readme",
+  "keywords": [],
   "description": ""
 }
